--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,11 @@
               ><img class="logo__img" src="images/icon/logo.svg" alt="logo"
             /></a>
             <nav class="menu">
+              <button class="menu__btn">
+                <span></span>
+                <span></span>
+                <span></span>
+              </button>
               <ul class="menu__items">
                 <li class="menu__item">
                   <a class="menu__link" href="newcars.html">NEW CARS</a>
@@ -123,7 +128,7 @@
                   src="images/icon/easytop.svg"
                   alt="Easy Upgrade"
                 />
-                <p class="why__title">Easy Upgrade</p>
+                <p class="why__subtitle subtitle">Easy Upgrade</p>
                 <p class="why__text">
                   Easy to upgrade to the newest vehicle model every few years if
                   you would like to be modern and comfortable
