--- a/app/404.html
+++ b/app/404.html
@@ -24,52 +24,33 @@
               ><img class="logo__img" src="images/icon/logo.svg" alt="logo"
             /></a>
             <nav class="menu">
+              <button class="menu__btn">
+                <span></span>
+                <span></span>
+                <span></span>
+              </button>
               <ul class="menu__items">
                 <li class="menu__item">
                   <a class="menu__link" href="newcars.html">NEW CARS</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="#">PRE-OWNED CARS</a>
+                  <a class="menu__link" href="404.html">PRE-OWNED CARS</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="#">FINANCE</a>
+                  <a class="menu__link" href="404.html">FINANCE</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="#">LEASE VS BUY</a>
+                  <a class="menu__link" href="404.html">LEASE VS BUY</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link menu__link--active" href="contacts.html"
-                    >CONTACT US</a
-                  >
+                  <a class="menu__link" href="contacts.html">CONTACT US</a>
                 </li>
               </ul>
             </nav>
           </div>
         </div>
       </header>
-      <main class="main">
-        <section class="404">
-          <div class="container">
-            <h2 class="title title__h2 contacts__title">Contact Us</h2>
-            <p class="contacts__subtitle subtitle">
-              Feel free to contact us with questions, potencial partnerships or
-              media inquiries
-            </p>
-            <form class="contacts__form form" action="#">
-              <input class="form__input" type="text" placeholder="Name" />
-              <input class="form__input" type="email" placeholder="E-mail" />
-              <textarea
-                class="form__textarea"
-                placeholder="Your text"
-              ></textarea>
-              <button class="form__btn" type="submit">SUBMIT</button>
-            </form>
-          </div>
-        </section>
-        <section class="blog">
-          <div class="container"></div>
-        </section>
-      </main>
+      <main class="main"></main>
       <footer class="footer">
         <div class="container">
           <nav class="footer__menu">
@@ -81,7 +62,7 @@
                 <a class="footer__menu-link" href="#">Used</a>
               </li>
               <li class="footer__menu-item">
-                <a class="footer__menu-link" href="#">New</a>
+                <a class="footer__menu-link" href="newcars.html">New</a>
               </li>
               <li class="footer__menu-item">
                 <a class="footer__menu-link" href="#">Sell your car</a>
@@ -98,7 +79,7 @@
                 <a class="footer__menu-link" href="#">FAQ</a>
               </li>
               <li class="footer__menu-item">
-                <a class="footer__menu-link" href="#">Contact us</a>
+                <a class="footer__menu-link" href="contacts.html">Contact us</a>
               </li>
             </ul>
             <ul class="footer__menu-list">
