--- a/app/index.html
+++ b/app/index.html
@@ -34,13 +34,13 @@
                   <a class="menu__link" href="newcars.html">NEW CARS</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="#">PRE-OWNED CARS</a>
+                  <a class="menu__link" href="404.html">PRE-OWNED CARS</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="#">FINANCE</a>
+                  <a class="menu__link" href="404.html">FINANCE</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="#">LEASE VS BUY</a>
+                  <a class="menu__link" href="404.html">LEASE VS BUY</a>
                 </li>
                 <li class="menu__item">
                   <a class="menu__link" href="contacts.html">CONTACT US</a>
@@ -54,7 +54,7 @@
         <section class="top">
           <div class="container">
             <h1 class="title title__h1 top__title">Leasing From D&M</h1>
-            <a class="top__btn" href="#">find a car</a>
+            <a class="top__btn" href="newcars.html">find a car</a>
           </div>
         </section>
         <div class="slider">
@@ -273,7 +273,7 @@
                 <a class="footer__menu-link" href="#">Used</a>
               </li>
               <li class="footer__menu-item">
-                <a class="footer__menu-link" href="#">New</a>
+                <a class="footer__menu-link" href="newcars.html">New</a>
               </li>
               <li class="footer__menu-item">
                 <a class="footer__menu-link" href="#">Sell your car</a>
@@ -290,7 +290,7 @@
                 <a class="footer__menu-link" href="#">FAQ</a>
               </li>
               <li class="footer__menu-item">
-                <a class="footer__menu-link" href="#">Contact us</a>
+                <a class="footer__menu-link" href="contacts.html">Contact us</a>
               </li>
             </ul>
             <ul class="footer__menu-list">
