--- a/app/newcars.html
+++ b/app/newcars.html
@@ -24,20 +24,23 @@
               ><img class="logo__img" src="images/icon/logo.svg" alt="logo"
             /></a>
             <nav class="menu">
+              <button class="menu__btn">
+                <span></span>
+                <span></span>
+                <span></span>
+              </button>
               <ul class="menu__items">
                 <li class="menu__item">
-                  <a class="menu__link menu__link--active" href="newcars.html"
-                    >NEW CARS</a
-                  >
+                  <a class="menu__link" href="newcars.html">NEW CARS</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="#">PRE-OWNED CARS</a>
+                  <a class="menu__link" href="404.html">PRE-OWNED CARS</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="#">FINANCE</a>
+                  <a class="menu__link" href="404.html">FINANCE</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="#">LEASE VS BUY</a>
+                  <a class="menu__link" href="404.html">LEASE VS BUY</a>
                 </li>
                 <li class="menu__item">
                   <a class="menu__link" href="contacts.html">CONTACT US</a>
@@ -335,7 +338,7 @@
                 <a class="footer__menu-link" href="#">Used</a>
               </li>
               <li class="footer__menu-item">
-                <a class="footer__menu-link" href="#">New</a>
+                <a class="footer__menu-link" href="newcars.html">New</a>
               </li>
               <li class="footer__menu-item">
                 <a class="footer__menu-link" href="#">Sell your car</a>
@@ -352,7 +355,7 @@
                 <a class="footer__menu-link" href="#">FAQ</a>
               </li>
               <li class="footer__menu-item">
-                <a class="footer__menu-link" href="#">Contact us</a>
+                <a class="footer__menu-link" href="contacts.html">Contact us</a>
               </li>
             </ul>
             <ul class="footer__menu-list">
