--- a/app/404.html
+++ b/app/404.html
@@ -50,7 +50,22 @@
           </div>
         </div>
       </header>
-      <main class="main"></main>
+      <main class="main">
+        <div class="container">
+          <div class="page404">
+            <h2 class="title title__h2 page404__title">
+              Sorry. The website is not completed.
+            </h2>
+            <p class="page404__number">404</p>
+            <p class="page404__sorry">
+              You can visit the
+              <a class="page404__link" href="index.html">main page</a>,
+              <a class="page404__link" href="newcars.html">new cars</a> or
+              <a class="page404__link" href="contacts.html">contacts</a>.
+            </p>
+          </div>
+        </div>
+      </main>
       <footer class="footer">
         <div class="container">
           <nav class="footer__menu">
