--- a/app/contacts.html
+++ b/app/contacts.html
@@ -43,7 +43,9 @@
                   <a class="menu__link" href="404.html">LEASE VS BUY</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="contacts.html">CONTACT US</a>
+                  <a class="menu__link menu__link--active" href="contacts.html"
+                    >CONTACT US</a
+                  >
                 </li>
               </ul>
             </nav>
