--- a/app/newcars.html
+++ b/app/newcars.html
@@ -31,7 +31,9 @@
               </button>
               <ul class="menu__items">
                 <li class="menu__item">
-                  <a class="menu__link" href="newcars.html">NEW CARS</a>
+                  <a class="menu__link menu__link--active" href="newcars.html"
+                    >NEW CARS</a
+                  >
                 </li>
                 <li class="menu__item">
                   <a class="menu__link" href="404.html">PRE-OWNED CARS</a>
