new image, content and change color

--- a/app/newcars.html
+++ b/app/newcars.html
@@ -95,40 +95,90 @@
                   <div class="tabs__card">
                     <img
                       class="tabs__card-img"
-                      src="images/content/car_02.jpg"
-                      alt="Prius Prime 2023"
+                      src="images/content/car_10.jpg"
+                      alt="Hyundai Tucson"
                     />
                     <h4 class="title title__h4 tabs__card-title">
-                      Prius Prime 2023
+                      Hyundai Tucson
                     </h4>
-                    <p class="tabs__card-text">starting from $ 39900</p>
+                    <p class="tabs__card-text">starting from $ 31900</p>
+                    <p class="tabs__card-price">$ 520/mo</p>
+                    <a class="tabs__card-link" href="#">see details</a>
+                  </div>
+                  <div class="tabs__card">
+                    <img
+                      class="tabs__card-img"
+                      src="images/content/car_15.jpg"
+                      alt="Toyota Camry"
+                    />
+                    <h4 class="title title__h4 tabs__card-title">
+                      Toyota Camry
+                    </h4>
+                    <p class="tabs__card-text">starting from $ 28900</p>
+                    <p class="tabs__card-price">$ 380/mo</p>
+                    <a class="tabs__card-link" href="#">see details</a>
+                  </div>
+                  <div class="tabs__card">
+                    <img
+                      class="tabs__card-img"
+                      src="images/content/car_16.jpg"
+                      alt="Kia Soul"
+                    />
+                    <h4 class="title title__h4 tabs__card-title">
+                      Kia Soul 2023
+                    </h4>
+                    <p class="tabs__card-text">starting from $ 35900</p>
+                    <p class="tabs__card-price">$ 499/mo</p>
+                    <a class="tabs__card-link" href="#">see details</a>
+                  </div>
+                  <div class="tabs__card">
+                    <img
+                      class="tabs__card-img"
+                      src="images/content/car_17.jpg"
+                      alt="Hyundai Sonata"
+                    />
+                    <h4 class="title title__h4 tabs__card-title">
+                      Hyundai Sonata
+                    </h4>
+                    <p class="tabs__card-text">starting from $ 31900</p>
                     <p class="tabs__card-price">$ 450/mo</p>
                     <a class="tabs__card-link" href="#">see details</a>
                   </div>
                   <div class="tabs__card">
                     <img
                       class="tabs__card-img"
-                      src="images/content/car_03.jpg"
-                      alt="Toyota Prius 2023"
+                      src="images/content/car_18.jpg"
+                      alt="Chevrolet Malibu"
                     />
                     <h4 class="title title__h4 tabs__card-title">
-                      Toyota Prius 2023
+                      Chevrolet Malibu
                     </h4>
-                    <p class="tabs__card-text">starting from $ 39900</p>
-                    <p class="tabs__card-price">$ 400/mo</p>
+                    <p class="tabs__card-text">starting from $ 25900</p>
+                    <p class="tabs__card-price">$ 350/mo</p>
                     <a class="tabs__card-link" href="#">see details</a>
                   </div>
                   <div class="tabs__card">
                     <img
                       class="tabs__card-img"
-                      src="images/content/car_04.jpg"
-                      alt="Hyundai Kona 2023"
+                      src="images/content/car_19.jpg"
+                      alt="Chevrolet Trax"
                     />
                     <h4 class="title title__h4 tabs__card-title">
-                      Hyundai Kona 2023
+                      Chevrolet Trax
                     </h4>
-                    <p class="tabs__card-text">starting from $ 39900</p>
-                    <p class="tabs__card-price">$ 510/mo</p>
+                    <p class="tabs__card-text">starting from $ 20900</p>
+                    <p class="tabs__card-price">$ 310/mo</p>
+                    <a class="tabs__card-link" href="#">see details</a>
+                  </div>
+                  <div class="tabs__card">
+                    <img
+                      class="tabs__card-img"
+                      src="images/content/car_20.jpg"
+                      alt="Kia  Sead"
+                    />
+                    <h4 class="title title__h4 tabs__card-title">Kia Sead</h4>
+                    <p class="tabs__card-text">starting from $ 29900</p>
+                    <p class="tabs__card-price">$ 320/mo</p>
                     <a class="tabs__card-link" href="#">see details</a>
                   </div>
                 </div>
@@ -137,52 +187,52 @@
                     <img
                       class="tabs__card-img"
                       src="images/content/car_05.jpg"
-                      alt="Toyota Crown 2023"
+                      alt="Ford Explorer 2023"
                     />
                     <h4 class="title title__h4 tabs__card-title">
-                      Toyota Crown 2023
+                      Ford Explorer 2023
                     </h4>
-                    <p class="tabs__card-text">starting from $ 39900</p>
-                    <p class="tabs__card-price">$ 650/mo</p>
+                    <p class="tabs__card-text">starting from $ 99900</p>
+                    <p class="tabs__card-price">$1,013/mo</p>
                     <a class="tabs__card-link" href="#">see details</a>
                   </div>
                   <div class="tabs__card">
                     <img
                       class="tabs__card-img"
-                      src="images/content/car_02.jpg"
-                      alt="Prius Prime 2023"
+                      src="images/content/car_08.jpg"
+                      alt="Chevrolet Silverado"
                     />
                     <h4 class="title title__h4 tabs__card-title">
-                      Prius Prime 2023
+                      Chevrolet Silverado
                     </h4>
-                    <p class="tabs__card-text">starting from $ 39900</p>
-                    <p class="tabs__card-price">$ 450/mo</p>
+                    <p class="tabs__card-text">starting from $ 62260</p>
+                    <p class="tabs__card-price">$1,232/mo</p>
                     <a class="tabs__card-link" href="#">see details</a>
                   </div>
                   <div class="tabs__card">
                     <img
                       class="tabs__card-img"
-                      src="images/content/car_03.jpg"
-                      alt="Toyota Prius 2023"
+                      src="images/content/car_12.jpg"
+                      alt="Jeep Wrangler 2023"
                     />
                     <h4 class="title title__h4 tabs__card-title">
-                      Toyota Prius 2023
+                      Jeep Wrangler 2023
                     </h4>
-                    <p class="tabs__card-text">starting from $ 39900</p>
-                    <p class="tabs__card-price">$ 400/mo</p>
+                    <p class="tabs__card-text">starting from $ 59499</p>
+                    <p class="tabs__card-price">$ 787/mo</p>
                     <a class="tabs__card-link" href="#">see details</a>
                   </div>
                   <div class="tabs__card">
                     <img
                       class="tabs__card-img"
-                      src="images/content/car_04.jpg"
-                      alt="Hyundai Kona 2023"
+                      src="images/content/car_13.jpg"
+                      alt=" Toyota Tundra"
                     />
                     <h4 class="title title__h4 tabs__card-title">
-                      Hyundai Kona 2023
+                      Toyota Tundra
                     </h4>
-                    <p class="tabs__card-text">starting from $ 39900</p>
-                    <p class="tabs__card-price">$ 510/mo</p>
+                    <p class="tabs__card-text">starting from $ 72260</p>
+                    <p class="tabs__card-price">$ 899/mo</p>
                     <a class="tabs__card-link" href="#">see details</a>
                   </div>
                 </div>
@@ -190,53 +240,53 @@
                   <div class="tabs__card">
                     <img
                       class="tabs__card-img"
+                      src="images/content/car_14.jpg"
+                      alt="Toyota rav 4 2023"
+                    />
+                    <h4 class="title title__h4 tabs__card-title">
+                      Toyota RAV-4 2023
+                    </h4>
+                    <p class="tabs__card-text">starting from $ 79900</p>
+                    <p class="tabs__card-price">$ 785/mo</p>
+                    <a class="tabs__card-link" href="#">see details</a>
+                  </div>
+                  <div class="tabs__card">
+                    <img
+                      class="tabs__card-img"
+                      src="images/content/car_06.jpg"
+                      alt="Santa  Fe 2023"
+                    />
+                    <h4 class="title title__h4 tabs__card-title">
+                      Santa Fe 2023
+                    </h4>
+                    <p class="tabs__card-text">starting from $ 59900</p>
+                    <p class="tabs__card-price">$739/mo</p>
+                    <a class="tabs__card-link" href="#">see details</a>
+                  </div>
+                  <div class="tabs__card">
+                    <img
+                      class="tabs__card-img"
                       src="images/content/car_09.jpg"
-                      alt="Toyota Crown 2023"
+                      alt="Honda CR-V 2023"
                     />
                     <h4 class="title title__h4 tabs__card-title">
-                      Toyota Crown 2023
+                      Honda CR-V 2023
                     </h4>
-                    <p class="tabs__card-text">starting from $ 39900</p>
-                    <p class="tabs__card-price">$ 650/mo</p>
+                    <p class="tabs__card-text">starting from $ 35650</p>
+                    <p class="tabs__card-price">$ 591/mo</p>
                     <a class="tabs__card-link" href="#">see details</a>
                   </div>
                   <div class="tabs__card">
                     <img
                       class="tabs__card-img"
-                      src="images/content/car_02.jpg"
-                      alt="Prius Prime 2023"
+                      src="images/content/car_11.jpg"
+                      alt="Chevrolet Equinox "
                     />
                     <h4 class="title title__h4 tabs__card-title">
-                      Prius Prime 2023
+                      Chevrolet Equinox
                     </h4>
-                    <p class="tabs__card-text">starting from $ 39900</p>
-                    <p class="tabs__card-price">$ 450/mo</p>
-                    <a class="tabs__card-link" href="#">see details</a>
-                  </div>
-                  <div class="tabs__card">
-                    <img
-                      class="tabs__card-img"
-                      src="images/content/car_03.jpg"
-                      alt="Toyota Prius 2023"
-                    />
-                    <h4 class="title title__h4 tabs__card-title">
-                      Toyota Prius 2023
-                    </h4>
-                    <p class="tabs__card-text">starting from $ 39900</p>
-                    <p class="tabs__card-price">$ 400/mo</p>
-                    <a class="tabs__card-link" href="#">see details</a>
-                  </div>
-                  <div class="tabs__card">
-                    <img
-                      class="tabs__card-img"
-                      src="images/content/car_04.jpg"
-                      alt="Hyundai Kona 2023"
-                    />
-                    <h4 class="title title__h4 tabs__card-title">
-                      Hyundai Kona 2023
-                    </h4>
-                    <p class="tabs__card-text">starting from $ 39900</p>
-                    <p class="tabs__card-price">$ 510/mo</p>
+                    <p class="tabs__card-text">starting from $ 28430</p>
+                    <p class="tabs__card-price">$ 471/mo</p>
                     <a class="tabs__card-link" href="#">see details</a>
                   </div>
                 </div>
@@ -244,26 +294,13 @@
                   <div class="tabs__card">
                     <img
                       class="tabs__card-img"
-                      src="images/content/car_11.jpg"
-                      alt="Toyota Crown 2023"
-                    />
-                    <h4 class="title title__h4 tabs__card-title">
-                      Toyota Crown 2023
-                    </h4>
-                    <p class="tabs__card-text">starting from $ 39900</p>
-                    <p class="tabs__card-price">$ 650/mo</p>
-                    <a class="tabs__card-link" href="#">see details</a>
-                  </div>
-                  <div class="tabs__card">
-                    <img
-                      class="tabs__card-img"
                       src="images/content/car_02.jpg"
                       alt="Prius Prime 2023"
                     />
                     <h4 class="title title__h4 tabs__card-title">
                       Prius Prime 2023
                     </h4>
-                    <p class="tabs__card-text">starting from $ 39900</p>
+                    <p class="tabs__card-text">starting from $ 49900</p>
                     <p class="tabs__card-price">$ 450/mo</p>
                     <a class="tabs__card-link" href="#">see details</a>
                   </div>
@@ -291,6 +328,19 @@
                     </h4>
                     <p class="tabs__card-text">starting from $ 39900</p>
                     <p class="tabs__card-price">$ 510/mo</p>
+                    <a class="tabs__card-link" href="#">see details</a>
+                  </div>
+                  <div class="tabs__card">
+                    <img
+                      class="tabs__card-img"
+                      src="images/content/car_07.jpg"
+                      alt="KIA Niro 2023"
+                    />
+                    <h4 class="title title__h4 tabs__card-title">
+                      KIA Niro 2023
+                    </h4>
+                    <p class="tabs__card-text">starting from $ 33600</p>
+                    <p class="tabs__card-price">$ 554/mo</p>
                     <a class="tabs__card-link" href="#">see details</a>
                   </div>
                 </div>
@@ -306,7 +356,7 @@
                 <img
                   class="blog__img"
                   src="images/content/news01.jpg"
-                  alt="Toytota"
+                  alt="Toyota"
                 />
                 <h4 class="title title__h4 blog__title">
                   An easier way to buy your next Toyota
